# imx6ull_lab

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  fix_music_btn.py  generate_qrc.sh  generate_svgs.py  make_icons.py  resources.qrc
.cache/clangd/index/: main.cpp.7CB921370EB50596.idx  mainwindow.cpp.E546DB3976CE5451.idx  mainwindow.h.53EDB031CF21CAE9.idx
apps/demo/: AppBootstrap.cpp  AppBootstrap.h  CMakeLists.txt  config.json  main.cpp  temp.txt
assets/: resources.qrc
assets/res/style/: HardwareControlPage.qss  MusicPage.qss  VideoPage.qss  base.qss  mainwindow.qss
components/core_utils/: CMakeLists.txt
components/core_utils/include/: AdvancedStateMachineTemplate.h  ConfigManager.h  EventBus.h  ILifecycleModule.h  LoggerManager.h  SimpleStateMachineTemplate.h  SystemManager.h
components/core_utils/src/: ConfigManager.cpp  EventBus.cpp  LoggerManager.cpp  SystemManager.cpp
components/gui_pages/: CMakeLists.txt
components/gui_pages/include/: HardwareControlPage.h  HardwareMonitorPage.h  MusicPage.h  VideoPage.h  mainwindow.h
components/gui_pages/src/: AIVoiceClient_copy.cpp  HardwareControlPage.cpp  HardwareMonitorPage.cpp  MusicPage.cpp  VideoPage.cpp  mainwindow.cpp
components/hal/: CMakeLists.txt
components/hal/include/: AudioHal.h  HardwareHal.h  VideoHal.h
components/hal/src/: AudioHal.cpp  HardwareHal.cpp  VideoHal.cpp
components/service/: CMakeLists.txt
components/service/include/: HardwareService.h  MediaService.h  VideoService.h
components/service/src/: HardwareService.cpp  MediaService.cpp  VideoService.cpp
docs/code_log/: ai_agent_architecture.md  camera_opencv_tutorial.md  tiny_local_ai_and_mqtt.md
docs/code_log/gui_page/: architecture_music.md  gui_page_log.md
docs/gui_page/: config_manager_music_pilot.md  modular_qss_tutorial.md
include/: AIVoiceClient_copy.h  IAppModule.h  LogManager.h  MusicPage.h  VideoPage.h  mainwindow.h
res/style/: HardwareControlPage_copy.qss  MusicPage.qss
scripts/: fix_video.py  make_videopage.py  make_white_icons.py  refactor_music.py  test_hw_probe.sh  update_music.py  update_video.py
src/: HardwareMonitorPage.cpp  LogManager.cpp  MusicPage.cpp  VideoPage.cpp  main.cpp  mainwindow.cpp
temp_backup/gui_pages/include/: MusicPage.h
temp_backup/gui_pages/src/: MusicPage.cpp
